@@ -1,3 +1,10 @@
+2007-10-01  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* i386-dis.c (THREE_BYTE_0FBA): Renamed to ...
+	(THREE_BYTE_0F7B): This.
+	(dis386_twobyte): Updated.
+	(three_byte_table): Updated comments.
+
 2007-10-01  M R Swami Reddy <MR.Swami.Reddy@nsc.com>
 
 	* cr16-opc.c: Updated the branch on condition instructions with
